<resources>
    <string name="app_name" translatable="false">Tufano Móvil</string>
    <string name="imagesContentDescription">Imagen</string>
    <string name="guion">&#8211;</string>
    <string name="formato_rif">(Formato: J&#8211;12345678&#8211;1)</string>
    <string name="cerrar_sesion">¿Estas seguro que deseas cerrar sesión?</string>
    <string name="profile_menu">Perfil</string>
    <string name="settings_menu">Configuración</string>
    <string name="talla_menu">Gestion de Tallas</string>
    <string name="tipo_menu">Gestion de Tipos</string>
    <string name="color_menu">Gestion de Colores</string>
    <string name="btn_login_1">Usuario</string>
    <string name="btn_login_2">Contraseña</string>
    <string name="btn_login_3">Iniciar sesión</string>
    <string name="logoContentDescription">Logotipo App</string>
    <string name="ayuda_login">¿Necesitas ayuda para iniciar sesión?</string>
    <string name="menu1">Consultas</string>
    <string name="menu2">Productos</string>
    <string name="menu3">Clientes</string>
    <string name="menu4">Pedidos</string>
    <string name="menu5">Facturas</string>
    <string name="menu6">Cobranzas</string>
    <string name="home_subtitulo">Home</string>
    <string name="menu_gestion_productos_1">Agregar</string>
    <string name="menu_gestion_productos_2">Editar</string>
    <string name="gestion_producto_subtitulo">Gestion de Productos</string>
    <string name="hint_modelo">Inserte el modelo.. (Por ej. 1215–05P)</string>
    <string name="hint_precio">Inserte el precio..</string>
    <string name="agregar_producto_btn">Agregar Producto</string>
    <string name="error_tipo">Seleccione un tipo!</string>
    <string name="error_talla">Seleccione una talla!"</string>
    <string name="error_color">Seleccione un color!"</string>
    <string name="agregar_producto_subtitulo">Agregar Producto</string>
    <string name="confirmacion_agregar_producto">¿Está seguro que desea agregar este producto?"</string>
    <string name="editar_producto_subtitulo">Editar Producto</string>
    <string name="hint_autoCModelo">Buscar por modelo..</string>
    <string name="cabecera_tabla_editar_producto_0">Imagen</string>
    <string name="cabecera_tabla_editar_producto_1">Talla</string>
    <string name="cabecera_tabla_editar_producto_2">Tipo</string>
    <string name="cabecera_tabla_editar_producto_3">Modelo</string>
    <string name="cabecera_tabla_editar_producto_4">Color</string>
    <string name="cabecera_tabla_editar_producto_5">Precio</string>
    <string name="cabecera_tabla_editar_producto_6">Numeracion</string>
    <string name="cabecera_tabla_editar_producto_7">Opciones</string>
    <string name="editar_producto_detalles_subtitulo">Editar Producto</string>
    <string name="confirmacion_editar_producto">¿Está seguro que desea editar este producto?"</string>
    <string name="cabecera_tabla_gestionTallas_1">Talla</string>
    <string name="cabecera_tabla_gestionTallas_2">Numeracion</string>
    <string name="cabecera_tabla_gestionTallas_3">Opciones</string>
    <string name="confirmacion_editar_talla">¿Está seguro que desea editar esta talla?"</string>
    <string name="confirmacion_agregar_talla">¿Está seguro que desea agregar esta talla?"</string>
    <string name="gestion_talla_subtitulo">Gestion de Tallas"</string>
    <string name="hint_nombre_talla">Inserte un nombre de talla..</string>
    <string name="btn_agregar_talla">Agregar Talla</string>
    <string name="btn_editar_talla">Editar Talla</string>
    <string name="gestion_tipo_subtitulo">Gestion de Tipos"</string>
    <string name="cabecera_tabla_gestionTipos_1">Tipo</string>
    <string name="cabecera_tabla_gestionTipos_2">Opciones</string>
    <string name="confirmacion_agregar_tipo">¿Está seguro que desea agregar este tipo?</string>
    <string name="hint_tipo_agregar">Inserte el nombre del tipo..</string>
    <string name="btn_agregar_tipo">Agregar tipo</string>
    <string name="btn_editar_tipo">Editar tipo</string>
    <string name="confirmacion_editar_tipo">¿Está seguro que desea editar este tipo?</string>
    <string name="confirmacion_agregar_color">¿Está seguro que desea agregar este color?</string>
    <string name="confirmacion_editar_color">¿Está seguro que desea editar este color?</string>
    <string name="gestion_color_subtitulo">Gestion de Colores</string>
    <string name="cabecera_tabla_gestionColores_1">Color</string>
    <string name="cabecera_tabla_gestionColores_2">Opciones</string>
    <string name="btn_agregar_color">Agregar color</string>
    <string name="hint_color_agregar">Inserte el nombre del color</string>
    <string name="btn_editar_color">Editar color</string>
    <string name="gestion_cliente_subtitulo">Gestion de Clientes</string>
    <string name="menu_gestion_clientes_1">Agregar</string>
    <string name="menu_gestion_clientes_2">Editar</string>
    <string name="agregar_cliente_subtitulo">Agregar Cliente</string>
    <string name="hint_razon_social">Inserte la razon social..</string>
    <string name="hint_telefono">Inserte el telefono..</string>
    <string name="hint_email">Inserte el email..</string>
    <string name="hint_direccion">Inserte la direccion..</string>
    <string name="hint_rif1">Inserte el rif..</string>
    <string name="hint_rif2">Terminal..</string>
    <string name="btn_agregar_cliente">Agregar Cliente</string>
    <string name="confirmacion_agregar_cliente">¿Está seguro que desea agregar este cliente?</string>
    <string name="error_rif">¡Seleccione un rif!</string>
    <string name="error_estado">¡Seleccione un estado!</string>
    <string name="editar_cliente_subtitulo">Editar Cliente</string>
    <string name="hint_autoCRazonSocial">Buscar por razon social..</string>
    <string name="cabecera_tabla_editar_cliente_0">Razon Social</string>
    <string name="cabecera_tabla_editar_cliente_1">Rif</string>
    <string name="cabecera_tabla_editar_cliente_2">Estado</string>
    <string name="cabecera_tabla_editar_cliente_3">Telefono</string>
    <string name="cabecera_tabla_editar_cliente_4">E-mail</string>
    <string name="cabecera_tabla_editar_cliente_5">Opciones</string>
    <string name="btn_editar_cliente">Editar Cliente</string>
    <string name="confirmacion_editar_cliente">¿Está seguro que desea editar este cliente?</string>
    <string name="menu_gestion_pedidos_1">Realizar</string>
    <string name="menu_gestion_pedidos_2">Editar</string>
    <string name="cantidad_productos">Cant. Productos:</string>
    <string name="cantidad_bultos">Cant. Bultos</string>
    <string name="cantidad_pares">Cant. Pares</string>
    <string name="totalBsF">Total Bs.F:</string>
    <string name="agregar_pedido_subtitulo">Realizar Pedido</string>
    <string name="btn_continuar_agregar_pedidos">Continuar</string>
    <string name="btn_cancelar_agregar_pedidos">Cancelar</string>
    <string name="imagen">Imagen</string>
    <string name="modelo">Modelo</string>
    <string name="precio">Precio</string>
    <string name="numeracion">Numeracion</string>
    <string name="bultos">Bultos</string>
    <string name="subtotal">Sub-total</string>
    <string name="confirmacion_cancelar_pedido">¿Está seguro que desea cancelar este pedido?</string>
    <string name="confirmacion_aprobar_pedido">¿Está seguro que desea aprobar este pedido?</string>
    <string name="confirmacion_editar_pedido">¿Está seguro que desea editar este pedido?</string>
    <string name="agregar_productos_pedido">Agregar productos seleccionados al pedido</string>
    <string name="cabecera_tabla_agregar_producto_7">Seleccionar</string>
    <string name="confirmacion_eliminar_producto_pedido">¿Está seguro que desea eliminar este producto del pedido?</string>
    <string name="msj_pedido_vacio">Pedido vacio, por favor agregue algún producto utilizando el boton inferior.</string>
    <string name="msj_sin_pedidos">No se han realizado pedidos aun, por favor realice alguno para mostrar la informacion aca.</string>
    <string name="msj_cliente_vacio">No hay cliente, por favor agregue alguno utilizando la opcion correspondiente del menú de inicio.</string>
    <string name="msj_producto_vacio">No hay productos, por favor agregue algún producto utilizando la opcion correspondiente del menú de inicio.</string>
    <string name="msj_producto_nodisponible">No hay productos disponibles para escoger, por favor agregue algún producto utilizando la opcion correspondiente del menú de inicio o asegurese de que quede algun producto sin agregar al pedido.</string>
    <string name="msj_color_vacio">No hay colores, por favor agregue algún color utilizando el boton inferior.</string>
    <string name="msj_tipo_vacio">No hay tipos, por favor agregue algún tipo utilizando el boton inferior.</string>
    <string name="msj_talla_vacio">No hay tallas, por favor agregue alguna talla utilizando el boton inferior.</string>
    <string name="realizar_pedido_subtitulo">Realizar Pedido</string>
    <string name="direccion">Direccion</string>
    <string name="btn_cancelar_pedido">Cancelar Pedido</string>
    <string name="btn_realizar_pedido">Realizar Pedido</string>
    <string name="confirmacion_realizar_pedido">¿Esta seguro que desea realizar el pedido?</string>
    <string name="pedido_num">Pedido #</string>
    <string name="vendedor">Vendedor</string>
    <string name="cliente">Cliente</string>
    <string name="fecha">Fecha</string>
    <string name="monto">Monto</string>
    <string name="estatus">Estatus</string>
    <string name="opciones">Opciones</string>
    <string name="btn_aprobar_pedido">Aprobar Pedido</string>
    <string name="btn_editar_pedido">Editar Pedido</string>
    <string name="pares_bulto">Pares por bulto</string>
    <string name="color">Color</string>
    <string name="sin_resultados">No se encontraron registros con los filtros indicados.</string>
    <string name="talla">Talla</string>
    <string name="tipo">Tipo</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="hint_nombre">Inserte el nombre..</string>
    <string name="hint_apellido">Inserte el apellido..</string>
    <string name="hint_cedula">Inserte la cedula..</string>
    <string name="hint_password">Contraseña actual..</string>
    <string name="hint_password_nuevo">Contraseña nueva..</string>
    <string name="hint_repetir_password">Confirme su contraseña..</string>
    <string name="checkBoxCambiarPassword">Deseo cambiar mi contraseña</string>
    <string name="confirmacion">Confirmar accion</string>
    <string name="confirmacion_editar_perfil">¿Está seguro que desea modificar los datos de usuario?</string>
    <string name="numeral">#</string>
    <string name="agregar_tipo">Agregar Tipo</string>
    <string name="editar_tipo">Editar Tipo</string>
    <string name="agregar_talla">Agregar Talla</string>
    <string name="editar_talla">Editar Talla</string>
    <string name="agregar_color">Agregar Color</string>
    <string name="editar_color">Editar Color</string>
    <string name="description_zoom_touch_close">Imagen tamaño real</string>
    <string name="confirmacion_agregar_producto_pedido">¿Está seguro que desea agregar los productos seleccionados al pedido?</string>
    <string name="dialog_compartir_whatsapp_extra">Seleccione la informacion que desea incluir en el mensaje a compartir.</string>
    <string name="agregar_tipo_subtitulo">Agregar Tipo</string>
    <string name="agregar_talla_subtitulo">Agregar Talla</string>
    <string name="editar_pedido_subtitulo">Editar Pedido</string>
    <string name="seleccionar_color">Seleccionar color..</string>
    <string name="color_seleccionado">Seleccione un color..</string>
    <string name="filter_menu">Filtrar</string>
    <string name="search_menu">Buscar</string>
    <string name="filtrar">Filtrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="get_backup">Recuperar datos</string>
    <string name="do_backup">Respaldar datos</string>
</resources>