<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tufano.tufanomovil.MainActivity">
    <item
        android:id="@+id/profile_settings"
        android:orderInCategory="1"
        android:title="@string/profile_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/settings_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/tipos_settings"
        android:orderInCategory="3"
        android:title="@string/tipo_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/tallas_settings"
        android:orderInCategory="4"
        android:title="@string/talla_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/colores_settings"
        android:orderInCategory="5"
        android:title="@string/color_menu"
        app:showAsAction="never" />
</menu>