<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tufano.tufanomovil.MainActivity">

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/profile_settings"
        android:orderInCategory="1"
        android:title="@string/profile_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/get_backup"
        android:orderInCategory="2"
        android:title="@string/get_backup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/do_backup"
        android:orderInCategory="3"
        android:title="@string/do_backup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/settings_menu"
        app:showAsAction="never" />
</menu>