<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/layout_dialog_focus"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"/>

        <Spinner
            android:id="@+id/tipo_sp_dialog"
            style="@android:style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            />

        <Spinner
            android:id="@+id/talla_sp_dialog"
            style="@android:style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/select_color_btn_dialog"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:layout_marginTop="15dp"
            android:text="@string/seleccionar_color"/>

        <EditText
            android:id="@+id/color_name_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:inputType="text"
            android:text="@string/color_seleccionado"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_cancelar_dialog"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_size"
            android:layout_weight="1"
            android:text="@string/cancelar"/>

        <Button
            android:id="@+id/btn_filtrado_dialog"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_size"
            android:layout_weight="1"
            android:text="@string/filtrar"/>
    </LinearLayout>

</LinearLayout>